modules/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  annotations:
    argocd.argoproj.io/sync-wave: "6"
spec:
  selector:
    app: minio
  ports:
    - name: api
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: ui
      protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
